--- a/notebooks/7_Classification/random_forest_classification.ipynb
+++ b/notebooks/7_Classification/random_forest_classification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -17,7 +17,6 @@
      "output_type": "stream",
      "text": [
       "All libraries successfully imported!\n",
-      "Scipy        : 1.3.3\n",
       "Scikit-learn : 0.24.2\n"
      ]
     }
@@ -52,20 +51,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Classification path are set to : /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/CLASSIF/\n"
+      "Classification path is set to : /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/CLASSIF/\n"
      ]
     }
    ],
    "source": [
     "computer_path = '/export/miro/ndeffense/LBRAT2104/'\n",
     "grp_letter    = 'X'\n",
+    "\n",
+    "lut_path  = f'{computer_path}data/LUT/'\n",
     "\n",
     "# Directory for all work files\n",
     "work_path = f'{computer_path}GROUP_{grp_letter}/WORK/'\n",
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +104,10 @@
     "trees_nb = 500\n",
     "\n",
     "field_classif_code = 'sub_nb'\n",
-    "field_classif_name = 'sub'"
+    "field_classif_name = 'sub'\n",
+    "\n",
+    "field_reclassif_code = 'grp_A_nb'\n",
+    "field_reclassif_name = 'grp_A'"
    ]
   },
   {
@@ -115,14 +119,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "in_situ_cal_shp = f'{in_situ_path}{site}_{year}_IN_SITU_ROI_CAL.shp'\n",
     "in_situ_cal_tif = f'{in_situ_path}{site}_{year}_IN_SITU_ROI_CAL.tif'\n",
     "\n",
-    "classif_tif = f'{classif_path}{site}_{year}_CLASSIF_RF_with_NDVI.tif'"
+    "classif_tif   = f'{classif_path}{site}_{year}_CLASSIF_RF_with_NDVI.tif'\n",
+    "reclassif_tif = f'{classif_path}{site}_{year}_CLASSIF_RF_with_NDVI_{field_reclassif_name}.tif'\n",
+    "\n",
+    "\n",
+    "s4s_lut_xlsx   = f'{lut_path}crop_dictionary_new.xlsx'\n"
    ]
   },
   {
@@ -141,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -151,10 +159,11 @@
      "output_type": "stream",
      "text": [
       "Raster template file : /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200417T104021_B11_10m_ROI_SCL.tif\n",
+      "The CRS of in situ data is    : 32631\n",
+      "The CRS of raster template is : 32631\n",
+      "CRS are the same\n",
       "Rasterize starts : /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/IN_SITU/NAMUR_2020_IN_SITU_ROI_CAL.shp\n",
-      "Rasterize is done : /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/IN_SITU/NAMUR_2020_IN_SITU_ROI_CAL.tif\n",
-      "Rasterize starts : /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/IN_SITU/NAMUR_2020_IN_SITU_ROI_VAL.shp\n",
-      "Rasterize is done : /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/IN_SITU/NAMUR_2020_IN_SITU_ROI_VAL.tif\n"
+      "Rasterize is done : /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/IN_SITU/NAMUR_2020_IN_SITU_ROI_CAL.tif\n"
      ]
     }
    ],
@@ -228,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -383,14 +392,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest training : 00:01:35.13\n"
+      "Random Forest training : 00:01:35.48\n"
      ]
     }
    ],
@@ -420,14 +429,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Our OOB prediction of accuracy is: 99.27%\n"
+      "Our OOB prediction of accuracy is: 99.28%\n"
      ]
     }
    ],
@@ -444,25 +453,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Band 1 importance: 0.0731\n",
-      "Band 2 importance: 0.017\n",
-      "Band 3 importance: 0.1093\n",
-      "Band 4 importance: 0.0922\n",
-      "Band 5 importance: 0.1293\n",
-      "Band 6 importance: 0.064\n",
-      "Band 7 importance: 0.1223\n",
-      "Band 8 importance: 0.1123\n",
-      "Band 9 importance: 0.1095\n",
-      "Band 10 importance: 0.0642\n",
-      "Band 11 importance: 0.0549\n",
-      "Band 12 importance: 0.052\n"
+      "Band 1 importance: 0.0741\n",
+      "Band 2 importance: 0.0181\n",
+      "Band 3 importance: 0.1064\n",
+      "Band 4 importance: 0.0936\n",
+      "Band 5 importance: 0.1284\n",
+      "Band 6 importance: 0.0632\n",
+      "Band 7 importance: 0.1153\n",
+      "Band 8 importance: 0.1143\n",
+      "Band 9 importance: 0.1094\n",
+      "Band 10 importance: 0.0693\n",
+      "Band 11 importance: 0.0551\n",
+      "Band 12 importance: 0.0529\n"
      ]
     }
    ],
@@ -480,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -951,14 +960,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Predicting the rest of the image\n",
+    "## 3. Predicting the rest of the image\n",
     "\n",
     "With our Random Forest classifier fit, we can now proceed by trying to classify the entire image."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +975,14 @@
      "output_type": "stream",
      "text": [
       "Reshaped from (570, 986, 12) to (562020, 12)\n",
-      "Random Forest training : 00:01:58.14\n"
+      "Random Forest training : 00:01:48.56\n",
+      "[[3199 3199 8111 ... 3199 3199 3199]\n",
+      " [3199 3199 3199 ... 3199 3199 3199]\n",
+      " [3199 3199 6999 ... 3199 3199 1121]\n",
+      " ...\n",
+      " [6999 6999 6999 ... 1111 1111 1111]\n",
+      " [6999 6999 6999 ... 1111 1111 1111]\n",
+      " [8111 8111 8111 ... 8111 8111 8111]]\n"
      ]
     }
    ],
@@ -983,7 +999,6 @@
     "\n",
     "print(f'Reshaped from {img.shape} to {img_as_array.shape}')\n",
     "\n",
-    "\n",
     "start_classification = time.time()\n",
     "\n",
     "# Now predict for each pixel\n",
@@ -997,31 +1012,32 @@
     "hours, rem = divmod(end_classification-start_classification, 3600)\n",
     "minutes, seconds = divmod(rem, 60)\n",
     "print(\"Random Forest training : {:0>2}:{:0>2}:{:05.2f}\".format(int(hours),int(minutes),seconds))\n",
-    "\n"
+    "\n",
+    "print(class_prediction)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Write Classification product into a GeoTIFF file"
+    "Write Classification product into a GeoTIFF file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Size of image : (570, 986)\n"
+      "Size of classification image : (570, 986)\n"
      ]
     }
    ],
    "source": [
-    "print(f'Size of image : {class_prediction.shape}')\n",
+    "print(f'Size of classification image : {class_prediction.shape}')\n",
     "\n",
     "# Open template image to get metadata\n",
     "src = rasterio.open(img_temp_tif)\n",
@@ -1031,6 +1047,207 @@
     "# Write classification image\n",
     "dst = rasterio.open(classif_tif, 'w', **profile)\n",
     "dst.write(class_prediction, 1)\n",
+    "\n",
+    "# Close rasterio objects\n",
+    "src.close()\n",
+    "dst.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Reclassification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.1 Open LUT and sort values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sub_nb</th>\n",
+       "      <th>sub</th>\n",
+       "      <th>grp_A_nb</th>\n",
+       "      <th>grp_A</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Remove</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1111</td>\n",
+       "      <td>Winter wheat</td>\n",
+       "      <td>111</td>\n",
+       "      <td>Wheat</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1112</td>\n",
+       "      <td>Spring wheat</td>\n",
+       "      <td>111</td>\n",
+       "      <td>Wheat</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1113</td>\n",
+       "      <td>Hard wheat</td>\n",
+       "      <td>111</td>\n",
+       "      <td>Wheat</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1114</td>\n",
+       "      <td>Soft wheat</td>\n",
+       "      <td>111</td>\n",
+       "      <td>Wheat</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sub_nb           sub  grp_A_nb   grp_A\n",
+       "0       0       Unknown         0  Remove\n",
+       "1    1111  Winter wheat       111   Wheat\n",
+       "2    1112  Spring wheat       111   Wheat\n",
+       "3    1113    Hard wheat       111   Wheat\n",
+       "4    1114    Soft wheat       111   Wheat"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "lut_df = pd.read_excel(s4s_lut_xlsx)\n",
+    "\n",
+    "lut_df = lut_df.sort_values(by=field_classif_code, ascending=True)\n",
+    "\n",
+    "display(lut_df[[field_classif_code, field_classif_name, field_reclassif_code, field_reclassif_name]].head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.2 Reclassify prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3199 3199 8111 ... 3199 3199 3199]\n",
+      " [3199 3199 3199 ... 3199 3199 3199]\n",
+      " [3199 3199 6999 ... 3199 3199 1121]\n",
+      " ...\n",
+      " [6999 6999 6999 ... 1111 1111 1111]\n",
+      " [6999 6999 6999 ... 1111 1111 1111]\n",
+      " [8111 8111 8111 ... 8111 8111 8111]]\n",
+      "[[  3   3   8 ...   3   3   3]\n",
+      " [  3   3   3 ...   3   3   3]\n",
+      " [  3   3   6 ...   3   3 112]\n",
+      " ...\n",
+      " [  6   6   6 ... 111 111 111]\n",
+      " [  6   6   6 ... 111 111 111]\n",
+      " [  8   8   8 ...   8   8   8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "src = rasterio.open(classif_tif)\n",
+    "\n",
+    "profile = src.profile\n",
+    "reclass_prediction = src.read(1)\n",
+    "\n",
+    "src.close()\n",
+    "\n",
+    "print(class_prediction)\n",
+    "\n",
+    "for i, row in lut_df.iterrows():\n",
+    "    \n",
+    "    old_class = row[field_classif_code]\n",
+    "    new_class = row[field_reclassif_code]\n",
+    "\n",
+    "    #print(f'{old_class} --> {new_class}')\n",
+    "\n",
+    "    #array[np.where(array == old_class)] = new_class\n",
+    "\n",
+    "    reclass_prediction[reclass_prediction == old_class] = new_class\n",
+    "\n",
+    "print(reclass_prediction)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.3 Write re-classification product into a GeoTIFF file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size of re-classification image : (570, 986)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Size of re-classification image : {reclass_prediction.shape}')\n",
+    "\n",
+    "# Open template image to get metadata\n",
+    "src = rasterio.open(img_temp_tif)\n",
+    "im = src.read(1)\n",
+    "profile = src.profile\n",
+    "\n",
+    "# Write re-classification image\n",
+    "dst = rasterio.open(reclassif_tif, 'w', **profile)\n",
+    "dst.write(reclass_prediction, 1)\n",
     "\n",
     "# Close rasterio objects\n",
     "src.close()\n",
